test/conformance/chainsaw/deleting-policies/cel-lib/image-lib/pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: example
  namespace: default
spec:
  containers:
    - name: nginx
      image: public.ecr.aws/docker/library/nginx:latest
